# Prueba-de-API

./: CLAUDE.md  README.md  pyproject.toml
app/: csv_writer.py  main.py  schemas.py
obd/: Cicloif.py  obd_collector.py
