[project]
name = "prueba-de-api"
version = "0.1.0"
description = "OBD-II data logger with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "requests>=2.32",
    "obd>=0.7",
]

[dependency-groups]
dev = [
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false
